Deploy Docker lambda 5

--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -3,7 +3,7 @@ name: Github Actions Pipeline
 env:
   STAGE: dev
   ROLE: DevAdminRole
-  AWS_ACCOUNT_ID: ${file(./dev.yml):awsAccountId}
+  AWS_ACCOUNT_ID: "654654324108"
 
 on:
   push:
