--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Build Docker Image
         run: |
           for image in $(yq eval '.images | keys | .[]' ./${{ env.STAGE }}.yml); do
-            docker build -t ${file(./${{ env.STAGE }}.yml):images.${image}.name} ${file(./${{ env.STAGE }}.yml):images.${image}.buildContext}
+            docker build -t $(yq eval ".images.${image}.name" ./${{ env.STAGE }}.yml) $(yq eval ".images.${image}.buildContext" ./${{ env.STAGE }}.yml)
           done
 
       - name: Push Docker Images to ECR
@@ -60,8 +60,8 @@ jobs:
         run: |
           $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
           for image in $(yq eval '.images | keys | .[]' ./${{ env.STAGE }}.yml); do
-            docker tag ${file(./${{ env.STAGE }}.yml):images.${image}.name}:latest ${{env.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${file(./${{ env.STAGE }}.yml):images.${image}.name}:latest
-            docker push ${{env.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${file(./${{ env.STAGE }}.yml):images.${image}.name}:latest
+            docker tag $(yq eval ".images.${image}.name" ./${{ env.STAGE }}.yml):latest ${{env.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/$(yq eval ".images.${image}.name" ./${{ env.STAGE }}.yml):latest
+            docker push ${{env.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/$(yq eval ".images.${image}.name" ./${{ env.STAGE }}.yml):latest
           done
 
   serverless:
