--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -45,20 +45,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Build Docker Image
-        run: |
-          docker build -t process-stock-feed src/lambda/process_stock_feed
-
-      - name: Push Docker Image to ECR
+      - name: Build and Push Docker Image to ECR
         env:
           AWS_ACCOUNT_ID: ${{ env.AWS_ACCOUNT_ID }}
-          AWS_DEFAULT_REGION: eu-west-2
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
-          docker tag process-stock-feed:latest ${{env.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/process-stock-feed:latest
-          docker push ${{env.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/process-stock-feed:latest
+          aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin 654654324108.dkr.ecr.eu-west-2.amazonaws.com
+          aws ecr create-repository --repository-name process-stock-feed --region eu-west-2
+          docker build -t process-stock-feed src/lambda/process_stock_feed
+          docker tag process-stock-feed:latest 654654324108.dkr.ecr.eu-west-2.amazonaws.com/process-stock-feed:latest
+          docker push 654654324108.dkr.ecr.eu-west-2.amazonaws.com/process-stock-feed:latest
 
   serverless:
     runs-on: ubuntu-latest
