--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -70,7 +70,7 @@ jobs:
 
   serverless:
     runs-on: ubuntu-latest
-    needs: docker
+    needs: terraform
     env:
       SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
       SLS_DEBUG: "*"
