--- a/serverless.yml
+++ b/serverless.yml
@@ -72,3 +72,24 @@ functions:
           bucket: ${self:custom.stockFeedBucketName}
           event: s3:ObjectCreated:*
           existing: true
+
+  generate-ebay-table:
+    description: "Generate ebay table"
+    role: ${ssm:/${self:service}/generate-ebay-table/lambda-iam-role/arn}
+    handler: src.lambda.generate_ebay_table.main.lambda_handler
+    package:
+      patterns:
+        - "!node_modules/**"
+        - "!yarn.lock"
+        - "!package-lock.json"
+        - "!package.json"
+      include:
+        - "src/lambda/generate_ebay_table/**"
+        - "src/shared/**"
+        - "src/__init__.py"
+    timeout: 900
+    memorySize: 2048
+    layers:
+      - { Ref: PythonRequirementsLambdaLayer }
+    environment:  
+      AWS_ACCOUNT_ID: ${self:custom.environment.awsAccountId}
