--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -94,7 +94,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/DevAdminRole --role-session-name MySession)
+          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
           echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
           echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
@@ -104,8 +104,8 @@ jobs:
           npm install -g serverless
           npm init -y
           npm install serverless-python-requirements
-          serverless requirements install --stage dev
+          serverless requirements install --stage ${{ env.STAGE }}
 
       - name: Deploy with Serverless
         run: |
-          serverless deploy --stage dev
+          serverless deploy --stage ${{ env.STAGE }}
