--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -44,13 +44,11 @@ jobs:
 
       - name: Terraform Setup & Apply
         env:
+          AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
         run: |
-          echo "AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}"
-          echo "AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}"
-          echo "AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}"
           terraform fmt -check
           terraform init -backend-config=backend/backend_config_${{ env.STAGE }}.tfvars
           terraform plan -no-color -var-file env_${{ env.STAGE }}.tfvars
@@ -65,6 +63,7 @@ jobs:
 
       - name: Build and Push Docker Image to ECR
         env:
+          AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
@@ -105,6 +104,7 @@ jobs:
 
       - name: Deploy with Serverless
         env:
+          AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
