--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -45,9 +45,8 @@ jobs:
       - name: Terraform Setup & Apply
         env:
           AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
-          AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           terraform fmt -check
           terraform init -backend-config=backend/backend_config_${{ env.STAGE }}.tfvars
