--- a/.github/workflows/config_prod.yml
+++ b/.github/workflows/config_prod.yml
@@ -1,7 +1,12 @@
 name: Github Actions Pipeline
 
 env:
+  STAGE: prod
+  ROLE: ProdAdminRole
   AWS_ACCOUNT_ID: "905418370160"
+  DOCKER_IMAGE: "process-stock-feed"
+  DOCKER_BUILD_DIR: "./src/lambda/process_stock_feed"
+
 
 on:
   push:
@@ -18,22 +23,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Update or Install AWS CLI
-        run: |
-          curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip -o awscliv2.zip
-          sudo ./aws/install --update
-
-      - name: Check AWS CLI Version
-        run: aws --version
-
       - name: Assume AWS Role
         env:
           AWS_DEFAULT_REGION: eu-west-2
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/ProdAdminRole --role-session-name MySession)
+          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
           echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
           echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
@@ -41,6 +37,76 @@ jobs:
       - name: Terraform Setup & Apply
         run: |
           terraform fmt -check
-          terraform init -backend-config=backend/backend_config_prod.tfvars
-          terraform plan -no-color -var-file env_prod.tfvars
-          terraform apply -auto-approve -var-file env_prod.tfvars
+          terraform init -backend-config=backend/backend_config_${{ env.STAGE }}.tfvars
+          terraform plan -no-color -var-file env_${{ env.STAGE }}.tfvars
+          terraform apply -auto-approve -var-file env_${{ env.STAGE }}.tfvars
+          
+  docker:
+    runs-on: ubuntu-latest
+    needs: terraform
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Assume AWS Role
+        env:
+          AWS_DEFAULT_REGION: eu-west-2
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
+          echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
+          echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
+
+      - name: Build and Push Docker Image to ECR
+        run: |
+          echo "Logging in to ECR..."
+          aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com
+          if ! aws ecr describe-repositories --repository-names ${{ env.DOCKER_IMAGE }} --region eu-west-2; then
+            aws ecr create-repository --repository-name ${{ env.DOCKER_IMAGE }} --region eu-west-2
+          fi
+          docker buildx build --platform linux/amd64 -t ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_BUILD_DIR }}
+          docker tag ${{ env.DOCKER_IMAGE }}:latest ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
+          docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
+
+  serverless:
+    runs-on: ubuntu-latest
+    needs: docker
+    env:
+      SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js (20.x)
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+
+      - name: Setup Python (3.11)
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.11
+
+      - name: Assume AWS Role
+        env:
+          AWS_DEFAULT_REGION: eu-west-2
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
+          echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
+          echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
+
+      - name: Install Serverless
+        run: |
+          npm install -g serverless
+          npm init -y
+          npm install serverless-python-requirements
+          serverless requirements install --stage ${{ env.STAGE }}
+
+      - name: Deploy with Serverless
+        run: |
+          serverless deploy --stage ${{ env.STAGE }}
