--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -13,33 +13,33 @@ on:
       - "**dev-deploy-*"
 
 jobs:
-  terraform:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./infra
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+  # terraform:
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ./infra
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
 
-      - name: Assume AWS Role
-        env:
-          AWS_DEFAULT_REGION: eu-west-2
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
-          echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
-          echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
+  #     - name: Assume AWS Role
+  #       env:
+  #         AWS_DEFAULT_REGION: eu-west-2
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #       run: |
+  #         output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
+  #         echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
+  #         echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
+  #         echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
 
-      - name: Terraform Setup & Apply
-        run: |
-          terraform fmt -check
-          terraform init -backend-config=backend/backend_config_${{ env.STAGE }}.tfvars
-          terraform plan -no-color -var-file env_${{ env.STAGE }}.tfvars
-          terraform apply -auto-approve -var-file env_${{ env.STAGE }}.tfvars
-          
+  #     - name: Terraform Setup & Apply
+  #       run: |
+  #         terraform fmt -check
+  #         terraform init -backend-config=backend/backend_config_${{ env.STAGE }}.tfvars
+  #         terraform plan -no-color -var-file env_${{ env.STAGE }}.tfvars
+  #         terraform apply -auto-approve -var-file env_${{ env.STAGE }}.tfvars
+  
   docker:
     runs-on: ubuntu-latest
     needs: terraform
