--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -39,10 +39,10 @@ jobs:
   #         terraform init -backend-config=backend/backend_config_${{ env.STAGE }}.tfvars
   #         terraform plan -no-color -var-file env_${{ env.STAGE }}.tfvars
   #         terraform apply -auto-approve -var-file env_${{ env.STAGE }}.tfvars
-  
+
   docker:
     runs-on: ubuntu-latest
-    needs: terraform
+    # needs: terraform
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
