--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -42,7 +42,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    # needs: terraform
+    needs: terraform
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
