Add module property

--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,7 @@ functions:
     description: "Add partitions to tables"
     role: ${ssm:/${self:service}/add-partition/lambda-iam-role/arn}
     handler: src.lambda.add_partition.main.lambda_handler
+    module: src/lambda/add_partition
     package:
       patterns:
         - "!node_modules/**"
@@ -48,7 +49,6 @@ functions:
         - "src/lambda/add_partition/**"
         - "src/shared/**"
         - "src/__init__.py"
-    requirements: src/lambda/add_partition/requirements.txt
     timeout: 900
     memorySize: 2048
     layers:
@@ -78,6 +78,7 @@ functions:
     description: "Generate ebay table"
     role: ${ssm:/${self:service}/generate-ebay-table/lambda-iam-role/arn}
     handler: src.lambda.generate_ebay_table.main.lambda_handler
+    module: src/lambda/generate_ebay_table
     package:
       patterns:
         - "!node_modules/**"
@@ -88,7 +89,6 @@ functions:
         - "src/lambda/generate_ebay_table/**"
         - "src/shared/**"
         - "src/__init__.py"
-    requirements: src/lambda/generate_ebay_table/requirements.txt
     timeout: 900
     memorySize: 2048
     layers:
