--- a/src/lambda/process_stock_feed/Dockerfile
+++ b/src/lambda/process_stock_feed/Dockerfile
@@ -3,6 +3,8 @@ FROM public.ecr.aws/lambda/python:3.11
 
 # Set environment variable
 ENV AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}
+ENV AWS_ACCESS_KEY_ID_ADMIN=${AWS_ACCESS_KEY_ID_ADMIN}
+ENV AWS_SECRET_ACCESS_KEY_ADMIN=${AWS_SECRET_ACCESS_KEY_ADMIN}
 
 # Install git
 RUN yum install -y git
