--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -90,9 +90,9 @@ jobs:
 
       - name: Assume AWS Role
         env:
-          AWS_DEFAULT_REGION: eu-west-2
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: eu-west-2
         run: |
           output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
           echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
@@ -110,4 +110,4 @@ jobs:
 
       - name: Deploy with Serverless
         run: |
-          serverless deploy --stage ${{ env.STAGE }} --debug
+          serverless deploy --stage ${{ env.STAGE }}
