--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -6,7 +6,7 @@ env:
   AWS_ACCOUNT_ID: "654654324108"
   DOCKER_IMAGE: "process-stock-feed"
   DOCKER_BUILD_DIR: "./src/lambda/process_stock_feed"
-
+  AWS_REGION: "eu-west-2"
 on:
   push:
     tags:
@@ -24,7 +24,7 @@ jobs:
 
       - name: Assume AWS Role
         env:
-          AWS_DEFAULT_REGION: eu-west-2
+          AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
@@ -49,7 +49,7 @@ jobs:
 
       - name: Assume AWS Role
         env:
-          AWS_DEFAULT_REGION: eu-west-2
+          AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
@@ -61,13 +61,13 @@ jobs:
       - name: Build and Push Docker Image to ECR
         run: |
           echo "Logging in to ECR..."
-          aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com
-          if ! aws ecr describe-repositories --repository-names ${{ env.DOCKER_IMAGE }} --region eu-west-2; then
-            aws ecr create-repository --repository-name ${{ env.DOCKER_IMAGE }} --region eu-west-2
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+          if ! aws ecr describe-repositories --repository-names ${{ env.DOCKER_IMAGE }} --region ${{ env.AWS_REGION }}; then
+            aws ecr create-repository --repository-name ${{ env.DOCKER_IMAGE }} --region ${{ env.AWS_REGION }}
           fi
           docker buildx build --platform linux/amd64 -t ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_BUILD_DIR }}
-          docker tag ${{ env.DOCKER_IMAGE }}:latest ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
-          docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
+          docker tag ${{ env.DOCKER_IMAGE }}:latest ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
+          docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
 
   serverless:
     runs-on: ubuntu-latest
@@ -90,9 +90,9 @@ jobs:
 
       - name: Assume AWS Role
         env:
+          AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-west-2
         run: |
           output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.ROLE }} --role-session-name MySession)
           echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
