Add account id back in

--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,7 @@ service: rtg-automotive
 
 custom:
   stage: ${opt:stage}
+  environment: ${file(./${self:custom.stage}.yml)} 
   pythonRequirements:
     zip: true
     slim: true
