--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -65,7 +65,11 @@ jobs:
           if ! aws ecr describe-repositories --repository-names ${{ env.DOCKER_IMAGE }} --region ${{ env.AWS_REGION }}; then
             aws ecr create-repository --repository-name ${{ env.DOCKER_IMAGE }} --region ${{ env.AWS_REGION }}
           fi
-          docker buildx build --platform linux/amd64 -t ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_BUILD_DIR }}
+          docker buildx build --platform linux/amd64 
+            --build-arg AWS_ACCESS_KEY_ID_ADMIN=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            --build-arg AWS_SECRET_ACCESS_KEY_ADMIN=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            --build-arg STAGE=${{ env.STAGE }} \
+            -t ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_BUILD_DIR }}
           docker tag ${{ env.DOCKER_IMAGE }}:latest ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
           docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.DOCKER_IMAGE }}:latest
 
@@ -74,6 +78,7 @@ jobs:
     needs: docker
     env:
       SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+      SLS_DEBUG: "*"
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
