Update process stock feed

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,10 +1,11 @@
 pre-commit
 mypy
 ipykernel
-git+https://github.com/Oxford-Data-Processes/aws-utils.git
 pydantic
 sqlalchemy
 pyathena
 fastapi
 uvicorn
 mangum
+requests
+git+https://github.com/Oxford-Data-Processes/aws-utils.git
